# SteamKit

./: .editorconfig  .gitignore  .gitmodules  .hgignore  .hgtags  .travis.yml  Directory.Build.props  Steam-2010.sln  Steam.sln  SteamKit.snk  SteamKit2.nuspec  SteamKit2.sln  accounttype.steamd  appveyor.yml  emsg.steamd  eresult.steamd  global.json  header.steamd  netheader.steamd  readme.md  sonar-project.properties  steammessages.proto  steammessages_base.proto  steammessages_clientserver.proto  steammsg.steamd  tf_gcmessages.proto  universe.steamd
.ci/: build.sh  exec-with-retry.sh  test.sh
.dependabot/: config.yml
.github/: codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  bug_report.yml  config.yml  feature-request.yml  feature_request.md  feature_request.yml  nethook.yml  something-else.md
.github/workflows/: build-nethook2.yaml  build-steamkit2.yaml  stale.yml  steamkit2-build.yaml  steamkit2-gh-pkg.yaml  steamkit2-release.yaml  steamkitten-build.yaml  steamkitten-release.yaml  update-protobufs.yaml
BlobLib/: BlobLib.sln
BlobLib/BlobLib/: Blob.cs  BlobComponent.cs  BlobField.cs  BlobLib.csproj  BlobParser.cs  BlobTypes.cs  CachedBinaryReader.cs  CryptoHelper.cs
BlobLib/BlobTest/: BlobTest.csproj  Program.cs
Hasher/: Adler32.cs  ApHash.cs  BkdrHash.cs  BlockHashAlgorithm.cs  CRC.cs  CRCParameters.cs  CRCStandard.cs  ChangedEventArgs.cs  ChangedEventType.cs  Cksum.cs  Dha256.cs  DjbHash.cs  ELFHash.cs  EndianType.cs  FCS16.cs  FCS32.cs  FNV.cs  FNVAlgorithmType.cs  FNVParameters.cs  FNVStandard.cs  Fletcher.cs  FletcherParameters.cs  FletcherStandard.cs  GHash.cs  GHashParameters.cs  GHashStandard.cs  GOSTHash.cs  HAVAL.cs  HAVALParameters.cs  HAVALStandard.cs  Has160.cs  HashAlgorithm.cs  HashAlgorithmCollection.cs  HashAlgorithmParameters.cs  Hasher.csproj  IParametrizedHashAlgorithm.cs  JenkinsHash.cs  JsHash.cs  MD2.cs  MD4.cs  (+30 more)
Hasher/MAC/: HMAC.cs
Hasher/Methods/: HashChain.cs  HashList.cs  HashNode.cs  HashTree.cs  HashTreeNode.cs  MultiHash.cs  ParallelHash.cs
Hasher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
Hasher/Utilities/: BitTools.cs  Conversions.cs
NetHook/: DataDumper.cpp  DataDumper.h  NetHook.sln  NetHook.vcproj  NetHook.vcxproj  NetHook.vcxproj.filters  clientapp.cpp  clientapp.h  crypto.cpp  crypto.h  cryptobuffer.cpp  cryptobuffer.h  csimpledetour.cpp  csimpledetour.h  detours.lib  logger.cpp  logger.h  msghandlers.cpp  msghandlers.h  msgmanager.cpp  msgmanager.h  netpacket.cpp  netpacket.h  sigscan.cpp  udpconnection.cpp  udpconnection.h  utils.cpp  utils.h  wshooks.cpp  wshooks.h  zip.cpp  zlib.lib
NetHook/mathlib/: amd3dx.h  compressed_light_cube.h  polyhedron.h  quantize.h  simdvectormatrix.h
NetHook/steam/: clientmsgs.h  csteamid.h  emsg.h  steamtypes.h
NetHook/tier0/: IOCTLCodes.h  K8PerformanceCounters.h  basetypes.h  dbg.h  dbgflag.h  memdbgoff.h  progressbar.h  protected_things.h  threadtools.h  validator.h  valve_off.h  vprof.h  wchartypes.h
NetHook/tier1/: KeyValues.cpp  bitbuf.h  byteswap.cpp  convar.h  convar_serverbounded.h  datamanager.cpp  datamanager.h  delegates.h  fmtstr.h  functors.h  generichash.cpp  generichash.h  iconvar.h  interface.cpp  lzss.h  memstack.cpp  memstack.h  netadr.h  processor_detect.h  processor_detect_linux.cpp  rangecheckedvar.h  smartptr.h  stringpool.h  tokenreader.cpp  utlbidirectionalset.h  utlbuffer.cpp  utlhashdict.h  utlntree.h  utlrbtree.h  utlstack.h
Projects/BotTest/: App.config  BotTest.csproj  Program.cs  packages.config  test.bash
Resources/NetHook2/: .gitignore  BuildDependencies.cmd  CMakeLists.txt  GenerateVersionInfo.ps1  GenerateVersionInfo.sh  InstallDependencies.ps1  NetHook2.sln  SetupDependencies.bat  SetupDependencies.cmd  SetupDependencies.ps1  inject.sh  protobuf-Directory.Build.props  readme.md
Resources/NetHook2/NetHook2/: .gitignore  NetHook2.vcproj  NetHook2.vcxproj  NetHook2.vcxproj.filters  binaryreader.cpp  binaryreader.h  clientmodule.h  crypto.cpp  crypto.h  crypto_linux_x86.cpp  crypto_win32.cpp  csimpledetour.cpp  csimpledetour.h  csimplescan.cpp  csimplescan.h  detours.h  detours64.lib  injector.cpp  logger.cpp  logger.h  net.cpp  net.h  nethook.cpp  nh2_string.h  sedebug.cpp  sedebug.h  signscan.cpp  signscan.h  sigscan.cpp  sigscan.h  steamclient.h  steammessages_base.pb.cc  steammessages_base.pb.h  string.cpp  tuxhookldr.cpp  tuxjector.cpp  vcpkg.json  version.h  zip.cpp  zip.h
Resources/NetHook2/NetHook2/steam/: clientmsgs.h  emsg.h  net.h  steamtypes.h
Resources/TuxHook2/: .gitignore  CMakeLists.txt  inject.sh  readme.md
Resources/TuxHook2/TuxHook/: clientmodule.cpp  csimpledetour.cpp  csimpledetour.h  injector.cpp  logger.cpp  net.cpp  net.h  net_win32.cpp  sedebug.cpp  sedebug.h  test.cpp  tuxhook.cpp  tuxhookldr.cpp  utils.cpp  utils.h  utils_win32.cpp  zip.cpp  zip.h
Resources/TuxHook2/TuxHook/steam/: steamtypes.h  udppkt.h
Samples/: Samples.sln
Steam3Lib/: CSteamID.cs  CryptoHelper.cs  GDSClient.cs  NetPacket.cs  ScheduledFunction.cs  Steam3Lib.csproj  SteamGlobal.cs  SteamKit.csproj  SteamLib.csproj  TcpSocket.cs  UDPConnection.cs  UDPPktHdr.cs  UdpPacket.cs
Steam3Tester/: Program.cs  Steam3Tester.csproj
SteamKit/: SteamGlobal.cs  SteamKit.csproj  SteamKit2010.csproj  steammessages.proto
SteamKit2/: .gitignore  SteamKit2 (2010).sln  SteamKit2.csproj  SteamKit2.nuspec  SteamKit2.sln  changes.txt  gpl.txt  license.txt  packages.config
SteamKit3/: SteamKit3.sln
SteamKitX/: SteamKit.csproj  SteamKit.sln
SteamKitten/: SteamKitten.sln
SteamTester/: Program.cs  SteamTester.csproj  SteamTester2010.csproj
Tests/: CMClientFacts.cs  CallbackManagerFacts.cs  CallbackManagerFacts_LegacyBehavior.cs  ClientMsgFacts.cs  KeyValueFacts.cs  NetHelpersFacts.cs  SmartCMServerListFacts.cs  SteamClientFacts.cs  SteamIDFacts.cs  SteamUserFacts.cs  Tests.csproj  UFSClientFacts.cs  WebAPIFacts.cs
libsteam3/: libsteam3.sln
protobuf-deserialize/: Program.cs  protobuf-deserialize.csproj
steam_client_02/: steam_client_02.sln  steam_client_02_2008.sln
(+1633 files in other folders)
